--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@ h1 {
   </div>
 </div>
 
-<script src="../dist/zeu.js"></script>
+<script src="./zeu.min.js"></script>
 <script>
   var bgGreen = '#57dba2';
   var bgBlue = '#0385b8';
